Fix vertical alignment for button icon #PL-1995

--- a/modules/web/themes/havana/components/button/button.scss
+++ b/modules/web/themes/havana/components/button/button.scss
@@ -33,7 +33,7 @@
     font-size: 12px;
 
     .#{$primaryStyleName}-wrap {
-      margin-top: 2px;
+      margin-top: 3px;
       display: block;
 
       .#{$primaryStyleName}-caption {
